<resources>
    <string name="app_name">DutchPayCalc</string>
    <string name="clear">C</string>
    <string name="all_clear">すべてクリア</string>
    <string name="commit">確定</string>
    <string name="plus">+</string>
    <string name="three_zero">000</string>
    <string name="zero">0</string>
    <string name="minus">-</string>
    <string name="three">3</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="division">÷</string>
    <string name="startCalc">計算</string>
    <string name="all_price">総額</string>
    <string name="all_people">総人数</string>
    <string name="all_detail">立替（立替者／金額）</string>
    <string name="one_price">一人</string>
    <string name="fraction_price">端数</string>
    <string name="pay_people">支払う人</string>
    <string name="collect_people">集金する人</string>
    <string name="two_zero">00</string>
    <string name="collect_title">集金（立替者／集金額）</string>
    <string name="payment_title">支払い（誰から／誰へ／支払額）</string>
    <string name="radio_1000">1,000</string>
    <string name="radio_100">100</string>
    <string name="radio_10">10</string>
    <string name="radio_1">1</string>
    <string name="up_col_div">多めに徴収</string>
    <string name="down_col_div">少なめに徴収</string>
    <string name="fra_title">単位</string>
    <string name="ignore_people">免除</string>
    <string name="collect_price">集金額</string>
</resources>