<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_c2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/calc_result_text"
                style="@style/tv_calc_head"></TextView>


        </LinearLayout>
        <Button
            android:id="@+id/calc_commit_bt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/commit"></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="4dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/calc_recent_text"
                style="@style/tv_calc_bottom"></TextView>
            <Button
                android:id="@+id/calc_division_bt"
                style="@style/bt_char_calc"
                android:text="@string/division"></Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/calc_seven_bt"
                style="@style/bt_num_calc"
                android:text="@string/seven"></Button>

            <Button
                android:id="@+id/calc_eight_bt"
                style="@style/bt_num_calc"
                android:text="@string/eight"></Button>

            <Button
                android:id="@+id/calc_nine_bt"
                style="@style/bt_num_calc"
                android:text="@string/nine"></Button>

            <Button
                android:id="@+id/calc_multiple_bt"
                style="@style/bt_char_calc"
                android:text="×"></Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/calc_four_bt"
                style="@style/bt_num_calc"
                android:text="@string/four"></Button>

            <Button
                android:id="@+id/calc_five_bt"
                style="@style/bt_num_calc"
                android:text="@string/five"></Button>

            <Button
                android:id="@+id/calc_six_bt"
                style="@style/bt_num_calc"
                android:text="@string/six"></Button>

            <Button
                android:id="@+id/calc_minus_bt"
                style="@style/bt_char_calc"
                android:text="@string/minus"></Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/calc_one_bt"
                style="@style/bt_num_calc"
                android:text="@string/one"></Button>

            <Button
                android:id="@+id/calc_two_bt"
                style="@style/bt_num_calc"
                android:text="@string/two"></Button>

            <Button
                android:id="@+id/calc_three_bt"
                style="@style/bt_num_calc"
                android:text="@string/three"></Button>

            <Button
                android:id="@+id/calc_plus_bt"
                style="@style/bt_char_calc"
                android:text="@string/plus"></Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/calc_zero_bt"
                style="@style/bt_num_calc"
                android:text="@string/zero"></Button>

            <Button
                android:id="@+id/calc_two_zero_bt"
                style="@style/bt_num_calc"
                android:text="@string/two_zero" />

            <Button
                android:id="@+id/calc_clear_bt"
                style="@style/bt_char_calc"
                android:text="@string/clear"></Button>

            <Button
                android:id="@+id/calc_equal_bt"
                style="@style/bt_char_calc"
                android:text="="></Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>