<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary" />

    <LinearLayout
        android:id="@+id/top_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tool_bar_main"
        android:background="?attr/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                style="@style/main_ll_detail"
                android:layout_marginHorizontal="4dp"
                android:layout_marginBottom="4dp">

                <TextView
                    style="@style/tv_main"
                    android:text="@string/all_people"></TextView>

                <Button
                    android:id="@+id/all_people_bt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="@color/theme_c4"></Button>
            </LinearLayout>
            <LinearLayout
                style="@style/main_ll_detail"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp">

                <TextView
                    style="@style/tv_main"
                    android:text="@string/ignore_people"></TextView>

                <Button
                    android:id="@+id/ignore_people_bt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="@color/theme_c4"></Button>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            style="@style/main_ll_head"
            android:layout_marginHorizontal="4dp"
            android:layout_marginBottom="4dp">

            <TextView
                style="@style/tv_main"
                android:text="@string/fraction_price"></TextView>

            <RadioGroup
                android:id="@+id/rg_fraction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_c_1"
                    style="@style/category_radio"
                    android:background="@drawable/rg_ct"
                    android:text="@string/radio_1" />

                <RadioButton
                    android:id="@+id/rb_c_2"
                    style="@style/category_radio"
                    android:background="@drawable/rg_ct"
                    android:text="@string/radio_10" />

                <RadioButton
                    android:id="@+id/rb_c_3"
                    style="@style/category_radio"
                    android:background="@drawable/rg_ct"
                    android:text="@string/radio_100" />


                <RadioButton
                    android:id="@+id/rb_c_4"
                    style="@style/category_radio"
                    android:background="@drawable/rg_ct"
                    android:text="@string/radio_1000" />

            </RadioGroup>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mid_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/detail_plus_bt"
        android:layout_below="@+id/top_ll"
        android:layout_margin="4dp"
        android:background="@drawable/ll_bottom_round"
        android:orientation="vertical">

        <TextView
            style="@style/tv_headline"
            android:text="@string/all_detail" />

        <ListView
            android:id="@+id/item_lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:scrollbars="vertical"></ListView>

    </LinearLayout>

    <Button
        android:id="@+id/detail_plus_bt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/theme_c4"
        android:text="+"></Button>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>

</RelativeLayout>
